base/src/main/java/com/example/base/error/ErrorHandlingNavigation.kt
package com.example.base.error

interface ErrorHandlingNavigation {
    fun onUserTokenInvalid()
}